2007-07-02	Lanica Dragon (Phillip T. George <me@PhillipGeorge.com>)
	* PocketPC: Fixed bug with "Normal" option w/ D-PAD
			Normal option couldn't be selected
			
2007-07-01	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* content/*: Making usecode of the SI Fixes and LB joining mods compile.
	* usecode/compiler/ucsym.cc: UCC now issues a warning for every function
	  that gets autonumbered unless '#autonumber' directive is used.
	* usecode/compiler/uclex.yy: Optimizing lexical scanner a bit.
	* palette.cc, gameclk.cc: Fixing problems with infravision and (possibly)
	  invisibility palettes.
	* effects.cc: Tweaking duration of rain and snow a bit.
	* gamewin.cc, cheat_screen.cc, mapedit/npclst.cc, usecode/ucinternal.cc,
	  content/islefaq/initgame.dat: NPCs with numbers in the [356, 359] range
	  are hidden by Exult and ES, not being available for new NPCs. Also, these
	  'reserved' NPC numbers will not be converted to NPCs by intrinsics.
	  Other than that, negative usecode numbers will be converted to NPCs
	  whenever possible, like positive numbers; this effectivelly removes the
	  NPC # limit from Exult.
	  Finally, the SF Island patch has been remade to avoid using NPCs in the
	  range mentioned above.
	* usecode/compiler/ucsym.cc: Fixed Uc_function_symbol constructor not
	  initializing all class variables.

2007-06-30	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* (general): Adding missing newlines to end of files. Making numeric keypad
	  work for number input and return in gumps/menus.
	* usecode/ucsym.cc: Making shape# work again if using old auto-numbering.
	* mapedit/*: Allow separate viewing of shape functions in usecode browser.
	* content/bgkeyring/src/spells/npc_spells.uc: Reagents were being incorrectly
	  counted and used.
	* content/*: Updated old usecode to a more modern form. Fixed dialog bugs in
	  SF island and fixed initial scene.

2007-06-29	Lanica Dragon (Phillip T. George <me@PhillipGeorge.com>)